fix: z-index to content-header

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ MAIN CONTENT
   top: 0;
   right: 0;
   width: calc(100% - 200px);
+  z-index: 10;
 }
 
 .content-header + * {
